prototype decoder from blob to real loc

--- a/opt_coding.ipynb
+++ b/opt_coding.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:afdf1ce190fd41257bd56785844182ca3719f6b3fd83791ec08047498f5d3558"
+  "signature": "sha256:95beb5b7a218f97ed55e968364932390275650e1f29f277ee931371773868d77"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,15 +24,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "Using gpu device 0: Quadro K6000\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 1
     },
     {
@@ -1663,12 +1655,13 @@
       "    result_W = result['W']\n",
       "    result_V = result['V']\n",
       "    result_b = result['b']\n",
-      "    result_c = result['c']"
+      "    result_c = result['c']\n",
+      "    result_x_hat = result['x_hat']"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 72
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -1803,6 +1796,62 @@
       }
      ],
      "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def create_decoder():\n",
+      "    A, y = T.fmatrices('A', 'y')\n",
+      "    x = T.nnet.sigmoid(T.dot(A, y))\n",
+      "    return theano.function(inputs=[A, y],\n",
+      "                           outputs=x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "decoder = create_decoder()\n",
+      "dec_mat = np.load('/Users/chayut/Dropbox/data/grid_cells/cpc_decoding_vector.npy')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "decoder(dec_mat, result_x_hat)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "array([[ 0.27246067,  0.17158265,  0.59323031, ...,  0.48518836,\n",
+        "         0.68330532,  0.4247331 ]], dtype=float32)"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
